# c-lesson

sources/forth_modoki/01_int_parser/: int_parser.c
sources/forth_modoki/02_int_parser_getc/: cl_getc.c  int_parser_getc.c
sources/forth_modoki/03_parser/: CMakeLists.txt  main.c  parser.c  parser.h
sources/forth_modoki/03_parser/test/: unittest.h  ut_parser.c
sources/forth_modoki/04_stack/: CMakeLists.txt  clesson.c  clesson.h  main.c  mydata.c  mydata.h  stack.c  stack.h
sources/forth_modoki/04_stack/test/: unittest.h  ut_stack.c
sources/forth_modoki/05_eval_num/: CMakeLists.txt  eval.c  parser.c  parser.h  stack.c
sources/forth_modoki/interpreter/: dict.c  dict.h  eval.c  stack.c  stack.h  stkelm.c  stkelm.h
